--- a/mobile/style.css
+++ b/mobile/style.css
@@ -4,10 +4,9 @@ canvas {
 }
 
 input {
-  font-size:100px;
   width:99%;
 }
 
 button {
-  font-size:9em;
+  /*font-size:9em;*/
 }
